--- a/locales/preferences/en.json
+++ b/locales/preferences/en.json
@@ -1,4 +1,5 @@
 {
+	"hourlyNotification_title": "Hourly notification",
 	"clipboardWatch_title": "Observe clipboard",
 	"quality_title": "Quality",
 	"quality-options-worst": "Worst",
