--- a/locales/preferences/fr.json
+++ b/locales/preferences/fr.json
@@ -1,4 +1,5 @@
 {
+	"hourlyNotification_title": "Notification par heure",
 	"clipboardWatch_title": "Observer le presse-papier",
 	"quality_title": "Qualité",
 	"quality-options-worst": "Pire",
