--- a/locales/preferences/en.json
+++ b/locales/preferences/en.json
@@ -1,4 +1,5 @@
 {
+	"autostart_title": "Launch on login",
 	"hourlyNotification_title": "Hourly notification",
 	"clipboardWatch_title": "Observe clipboard",
 	"quality_title": "Quality",
