browserView main output

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -12,5 +12,6 @@
 	"runCode": "Lancer le code !",
 
 	"textarea": "Zone de texte",
+	"output": "Sortie (lecture seule)",
 	"textarea_copied": "Zone de texte copiée !"
 }
