--- a/locales/en.json
+++ b/locales/en.json
@@ -12,5 +12,6 @@
 	"runCode": "Run code !",
 
 	"textarea": "Text area",
+	"output": "Output (read only)",
 	"textarea_copied": "Text area copied !"
 }
