--- a/locales/en.json
+++ b/locales/en.json
@@ -13,5 +13,8 @@
 
 	"textarea": "Text area",
 	"output": "Output (read only)",
-	"textarea_copied": "Text area copied !"
+	"textarea_copied": "Text area copied !",
+
+	"select_file": "Select file",
+	"select_path": "Select directory"
 }
