--- a/locales/preferences/fr.json
+++ b/locales/preferences/fr.json
@@ -1,7 +1,7 @@
 {
 	"autostart_title": "Lancer au démarrage",
-	"storagePath_title": "Stockage des options",
-	"storagePath_description": "Dossier à utiliser",
+	"storageDir_title": "Stockage des options",
+	"storageDir_description": "Dossier à utiliser",
 	"hourlyNotification_title": "Notification par heure",
 	"clipboardWatch_title": "Observer le presse-papier",
 	"quality_title": "Qualité",
