better input range

--- a/locales/preferences/en.json
+++ b/locales/preferences/en.json
@@ -20,7 +20,7 @@
 
 
 
-	"check_delay_title":  "deviantArt/freshRss verification delay (seconds)",
+	"check_delay_title":  "deviantArt/freshRss verification delay (minutes)",
 	"freshRss_baseUrl_title": "URL of your FreshRss instance (should end with /i/)",
 	"notify_checkedData_title": "Show a notification for deviantArt/freshRss",
 	"notify_all_viewed_title": "Show a notification when all view in website(s)"
