--- a/locales/preferences/en.json
+++ b/locales/preferences/en.json
@@ -23,5 +23,6 @@
 	"check_delay_title":  "deviantArt/freshRss verification delay (minutes)",
 	"freshRss_baseUrl_title": "URL of your FreshRss instance (should end with /i/)",
 	"notify_checkedData_title": "Show a notification for deviantArt/freshRss",
-	"notify_all_viewed_title": "Show a notification when all view in website(s)"
+	"notify_all_viewed_title": "Show a notification when all view in website(s)",
+	"tabPageServerIp_alias_title": "IP aliases"
 }
