--- a/locales/fr.json
+++ b/locales/fr.json
@@ -16,7 +16,7 @@
 
 	"textarea": "Zone de texte",
 	"output": "Sortie (lecture seule)",
-	"textarea_copied": "Zone de texte copiée !",
+	"textarea_clipped": "Zone de texte coupé !",
 
 	"select_file": "Sélectionner un fichier",
 	"select_path": "Sélectionner un dossier",
