--- a/locales/en.json
+++ b/locales/en.json
@@ -17,6 +17,7 @@
 	"textarea": "Text area",
 	"output": "Output (read only)",
 	"textarea_copied": "Text area copied !",
+	"textarea_clipped": "Text area clipped !",
 
 	"select_file": "Select file",
 	"select_path": "Select directory",
