--- a/locales/preferences/fr.json
+++ b/locales/preferences/fr.json
@@ -4,6 +4,8 @@
 	"storageDir_description": "Dossier à utiliser",
 	"hourlyNotification_title": "Notification par heure",
 	"clipboardWatch_title": "Observer le presse-papier",
+	"installChromeMessaging_title": "Installation chrome native",
+	"installChromeMessaging_description": "Autoriser la connexion de l'app avec les navigateurs",
 	"quality_title": "Qualité",
 	"quality-options-worst": "Pire",
 	"quality-options-360p": "360p",
