--- a/locales/preferences/fr.json
+++ b/locales/preferences/fr.json
@@ -25,6 +25,7 @@
 
 
 
+	"check_enabled_title": "Rafraichissement des données deviantArt/freshRss automatiques activé",
 	"check_delay_title":  "Délais de vérification de deviantArt/freshRss (minutes)",
 	"freshRss_baseUrl_title": "URL de votre instance FreshRss (devrait finir par un /i/)",
 	"notify_checkedData_title": "Affiche une notification pour deviantArt/freshRss",
