--- a/locales/preferences/fr.json
+++ b/locales/preferences/fr.json
@@ -30,5 +30,6 @@
 	"freshRss_baseUrl_title": "URL de votre instance FreshRss (devrait finir par un /i/)",
 	"notify_checkedData_title": "Affiche une notification pour deviantArt/freshRss",
 	"notify_all_viewed_title": "Affiche une notification quand tout est vu pour un/des site(s)",
-	"tabPageServerIp_alias_title": "Alias d'IP"
+	"tabPageServerIp_alias_title": "Alias d'IP",
+	"newTabStylesheet_title": "Stylesheet pour le nouvel onglet"
 }
