--- a/locales/preferences/en.json
+++ b/locales/preferences/en.json
@@ -32,5 +32,6 @@
 	"notify_all_viewed_title": "Show a notification when all view in website(s)",
 	"tabPageServerIp_alias_title": "IP aliases",
 	"newTabStylesheet_title": "New tab stylesheet",
-	"panelAlwaysShowMoveInNewWindow_title": "Always show \"new window\" in the tab mover"
+	"panelAlwaysShowMoveInNewWindow_title": "Always show \"new window\" in the tab mover",
+	"newTab_folders_title": "Folders for new tab"
 }
