--- a/locales/preferences/fr.json
+++ b/locales/preferences/fr.json
@@ -32,5 +32,6 @@
 	"notify_all_viewed_title": "Affiche une notification quand tout est vu pour un/des site(s)",
 	"tabPageServerIp_alias_title": "Alias d'IP",
 	"newTabStylesheet_title": "Stylesheet pour le nouvel onglet",
-	"panelAlwaysShowMoveInNewWindow_title": "Toujours afficher \"nouvelle fenêtre\" in the tab mover"
+	"panelAlwaysShowMoveInNewWindow_title": "Toujours afficher \"nouvelle fenêtre\" in the tab mover",
+	"newTab_folders_title": "Dossier pour la nouvel onglet"
 }
