mv website data settings to its own group

--- a/locales/en.json
+++ b/locales/en.json
@@ -5,6 +5,7 @@
 	"group_default": "Default",
 	"group_theme": "Theme",
 	"group_web_extension": "Browser extension",
+	"group_website_data": "Website data",
 
 	"timeIsNow": "It is now {{currentTime}}",
 
